# DijkstraParallel

./: .gitignore  Notes.md  README.md
Implementation/DijkstraAlgorithm/: .gitignore  CMakeLists.txt  dijkstraAlgorithm
Implementation/DijkstraAlgorithm/src/: ctkrangeslider.cpp  ctkrangeslider.h  dijkstraThread.cpp  dijkstraThread.h  main.cpp  statPlot.cpp  statPlot.h
Implementation/DijkstraAlgorithm/src/dijkstra/: opencl.cpp  opencl.h  openmp.cpp  openmp.h  standard.cpp  standard.h
Implementation/DijkstraAlgorithm/src/graph/: generator.cpp  generator.h
